cmake_minimum_required(VERSION 3.19)
project(LeetCodeSolutionsInCpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCodeSolutionsInCpp main.cpp Problem0012.h Problem0043.h Problem0056.h Problem0217.h Problem0218.h Problem0219.h Problem0215.h Problem0216.h Problem0220.h Problem0221.h Problem0222.h Problem0223.h Problem0224.h Problem0226.h Problem0227.h Problem0228.h Problem0229.h Problem0230.h Problem0231.h Problem0233.h Problem0234.h Problem0001.h Problem0002.h Problem0003.h Problem0004.h Problem0005.h Problem0007.h Problem0011.h Problem0015.h Problem0019.h Problem0022.h Problem0020.h Problem0021.h Problem0023.h Problem0024.h Problem0025.h Problem0031.h Problem0032.h Problem0033.h Problem0034.h Problem0036.h Problem0039.h Problem0040.h Problem0041.h Problem0042.h Problem0044.h Problem0046.h)